# bento-cl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/kernels/: sum.cl
src/run/: main.c
src/util/clUtils/: core.c  core.h  interface.c  interface.h  variable.c  variable.h  verbose.c  verbose.h
